tests/rosetta/out/C/amb.error
cc: exit status 1
/tmp/amb.c: In function ‘amb’:
/tmp/amb.c:84:22: error: request for member ‘len’ in something not a structure or union
   84 |   if (idx == wordsets.len) {
      |                      ^
/tmp/amb.c:92:22: error: request for member ‘data’ in something not a structure or union
   92 |   while (i < wordsets.data[idx].len) {
      |                      ^
/tmp/amb.c:93:23: error: request for member ‘data’ in something not a structure or union
   93 |     char *w = wordsets.data[idx].data[i];
      |                       ^
/tmp/amb.c: In function ‘mochi_main’:
/tmp/amb.c:122:30: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  122 |   list_int wordset_data[] = {tmp1, tmp2, tmp3, tmp4};
      |                              ^~~~
/tmp/amb.c:122:36: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  122 |   list_int wordset_data[] = {tmp1, tmp2, tmp3, tmp4};
      |                                    ^~~~
/tmp/amb.c:122:42: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  122 |   list_int wordset_data[] = {tmp1, tmp2, tmp3, tmp4};
      |                                          ^~~~
/tmp/amb.c:122:48: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  122 |   list_int wordset_data[] = {tmp1, tmp2, tmp3, tmp4};
      |                                                ^~~~
/tmp/amb.c:133:11: error: incompatible type for argument 1 of ‘amb’
  133 |   if (amb(wordset, res, 0)) {
      |           ^~~~~~~
      |           |
      |           list_list_int
/tmp/amb.c:83:13: note: expected ‘int’ but argument is of type ‘list_list_int’
   83 | int amb(int wordsets, list_string res, int idx) {
      |         ~~~~^~~~~~~~
